@@ -31,6 +31,7 @@ import javax.swing.LayoutStyle;
 import org.trypticon.hex.HexViewer;
 import org.trypticon.hex.binary.Binary;
 import org.trypticon.hex.gui.Resources;
+import org.trypticon.hex.gui.util.encoding.SelectEncodingButton;
 import org.trypticon.hex.util.swingsupport.PLAFUtils;
 
 /**
