@@ -142,12 +142,10 @@ AddAnnotation.nameWithoutEllipsis=Add Annotation
 AddAnnotation.accelerator.mac=meta B
 AddAnnotation.accelerator.other=ctrl B
 AddAnnotation.okButton=Add
-# {0} is the name of the parameter
-# {1} is either 'required' or 'optional' from the following strings.
-AddAnnotation.enterValueForParameter=Enter a value for parameter: {0} ({1})
-AddAnnotation.enterValueForParameter.required=required
-AddAnnotation.enterValueForParameter.optional=optional
 AddAnnotation.Errors.overlap=You cannot create annotations which overlap each other.
+AddAnnotation.optionsExplanation=Additional options for this annotation:
+AddAnnotation.optionFieldFormat={0}:
+AddAnnotation.optionsOkButton=Confirm
 
 AddSubRegion.name=Add Sub-Region
 AddSubRegion.accelerator.mac=meta R
